--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@contentstack/contentstack-angular-starter-app",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 3000",
+    "start": "npm run config && ng serve --port 3000",
     "build": "npm run config && npm run ng build",
     "lint": "ng lint",
     "config": "ts-node setenv.ts"
@@ -11,14 +11,15 @@
   "license": "MIT",
   "author": "Contentstack",
   "dependencies": {
-    "@angular/animations": "^12.2.11",
-    "@angular/common": "^12.2.11",
-    "@angular/compiler": "^12.2.11",
-    "@angular/core": "^12.2.11",
-    "@angular/platform-browser": "^12.2.11",
-    "@angular/platform-browser-dynamic": "^12.2.11",
-    "@angular/router": "^12.2.11",
-    "@angular/service-worker": "^12.2.11",
+    "@angular/animations": "^12.2.13",
+    "@angular/common": "^12.2.13",
+    "@angular/compiler": "^12.2.13",
+    "@angular/core": "^12.2.13",
+    "@angular/platform-browser": "^12.2.13",
+    "@angular/platform-browser-dynamic": "^12.2.13",
+    "@angular/router": "^12.2.13",
+    "@angular/service-worker": "^12.2.13",
+    "@contentstack/utils": "^1.1.0",
     "@ngrx/store": "^12.5.1",
     "contentstack": "^3.14.0",
     "ngx-json-viewer": "^3.0.2",
@@ -26,13 +27,15 @@
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.11",
-    "@angular/cli": "^12.2.11",
-    "@angular/compiler-cli": "^12.2.11",
-    "@types/node": "^16.11.6",
+    "@angular-devkit/build-angular": "^12.2.13",
+    "@angular/cli": "^12.2.13",
+    "@angular/compiler-cli": "^12.2.13",
+    "@types/node": "^16.11.9",
     "codelyzer": "^6.0.2",
+    "dotenv": "^10.0.0",
     "ts-node": "^10.4.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "yargs": "^17.2.1"
   }
 }
