feat:add custom api host support [ECO-539]

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,4 @@ CONTENTSTACK_DELIVERY_TOKEN= YOUR_DELIVERY_TOKEN
 CONTENTSTACK_ENVIRONMENT= YOUR_PUBLISHING_ENVIRONMENT
 # Optional only for EU data center set REGION = eu  ( default is "us")
 CONTENTSTACK_REGION= <eu or us>
+CONTENTSTACK_API_HOST= # eg api.contentstack.io for EU- eu-api.contentstack.com
