--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@contentstack/contentstack-angular-starter-app",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "scripts": {
     "ng": "ng",
     "start": "npm run config && ng serve --port 3000",
@@ -19,11 +19,12 @@
     "@angular/platform-browser-dynamic": "^12.2.13",
     "@angular/router": "^12.2.13",
     "@angular/service-worker": "^12.2.13",
+    "@contentstack/live-preview-utils": "^1.0.1",
     "@contentstack/utils": "^1.1.0",
     "@ngrx/store": "^12.5.1",
-    "contentstack": "^3.14.0",
+    "contentstack": "^3.15.0",
     "ngx-json-viewer": "^3.0.2",
-    "rxjs": "^7.4.0",
+    "rxjs": "^7.5.2",
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
