fix:removed editbtn fix [633]

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 
-#create environment file name as .env.local
+#create environment file name as .env
 #and place following configuration data.
 
 CONTENTSTACK_API_KEY=YOUR_API_KEY
