fix:set live preview value true

--- a/.env.sample
+++ b/.env.sample
@@ -12,9 +12,9 @@ CONTENTSTACK_ENVIRONMENT=YOUR_PUBLISHING_ENVIRONMENT
 CONTENTSTACK_MANAGEMENT_TOKEN= 
 CONTENTSTACK_API_HOST=
 CONTENTSTACK_APP_HOST=
-CONTENTSTACK_LIVE_PREVIEW=
+CONTENTSTACK_LIVE_PREVIEW=true  
+#(this will be true by default to disable live preview feature please provide value false)
 
-# For enabling live editing tags for this project set CONTENTSTACK_LIVE_PREVIEW=true by default it is set to false
 # For NA region add CONTENTSTACK_APP_HOST=app.contentstack.com
 # For EU region add CONTENTSTACK_APP_HOST=eu-app.contentstack.com
 # For setting custom host add CONTENTSTACK_API_HOST=for(NA: api.contentstack.io, EU: eu-api.contentstack.com)
