--- a/.env.sample
+++ b/.env.sample
@@ -10,8 +10,8 @@ CONTENTSTACK_ENVIRONMENT=YOUR_PUBLISHING_ENVIRONMENT
 
 # For live preview 
 CONTENTSTACK_MANAGEMENT_TOKEN= 
-CONTENTSTACK_API_HOST=
-CONTENTSTACK_APP_HOST=
+CONTENTSTACK_API_HOST=api.contentstack.io
+CONTENTSTACK_APP_HOST=app.contentstack.com
 CONTENTSTACK_LIVE_PREVIEW=true  
 #(this will be true by default to disable live preview feature please provide value false)
 
