updated env file accordingly

--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,7 @@ CONTENTSTACK_DELIVERY_TOKEN=YOUR_DELIVERY_TOKEN
 CONTENTSTACK_ENVIRONMENT=YOUR_PUBLISHING_ENVIRONMENT
 
 # For setting region add  CONTENTSTACK_REGION=(Optional for US region) Eg- eu
+# For setting branch add CONTENTSTACK_BRANCH=(Optional for default branch(main)) Eg- develop
 
 # For live preview 
 CONTENTSTACK_MANAGEMENT_TOKEN= 
