fix: defined node engine for vercel [ECO-1754]
Signed-off-by: Amitkanswal <amit.kanswal@contentstack.com>

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "ng lint",
     "config": "ts-node setenv.ts"
   },
+  "engines": {
+    "node": "^14 || ^16"
+  },
   "license": "MIT",
   "author": "Contentstack",
   "dependencies": {
