feat: support live preview 2.0
Signed-off-by: Amitkanswal <amit.kanswal@contentstack.com>

--- a/.env.sample
+++ b/.env.sample
@@ -1,21 +1,27 @@
 
-#create environment file name as .env
+#create environment file name as .env.local
 #and place following configuration data.
 
-CONTENTSTACK_API_KEY=YOUR_API_KEY
-CONTENTSTACK_DELIVERY_TOKEN=YOUR_DELIVERY_TOKEN
-CONTENTSTACK_ENVIRONMENT=YOUR_PUBLISHING_ENVIRONMENT
+CONTENTSTACK_API_KEY=your_stack_api_key
+CONTENTSTACK_DELIVERY_TOKEN=your_delivery_token
+CONTENTSTACK_ENVIRONMENT=your_environment_token
 
-# For setting region add  CONTENTSTACK_REGION=(Optional for US region) Eg- eu
-# For setting branch add CONTENTSTACK_BRANCH=(Optional for default branch(main)) Eg- develop
+# Below config options are for enabling live preview/live edit tags for the starter app
 
-# For live preview 
-CONTENTSTACK_MANAGEMENT_TOKEN= 
-CONTENTSTACK_API_HOST=api.contentstack.io
+CONTENTSTACK_PREVIEW_HOST= rest-preview.contentstack.com
+CONTENTSTACK_PREVIEW_TOKEN= your_live_preview_token
 CONTENTSTACK_APP_HOST=app.contentstack.com
-CONTENTSTACK_LIVE_PREVIEW=true  
-#(this will be true by default to disable live preview feature please provide value false)
+CONTENTSTACK_LIVE_PREVIEW= true
+CONTENTSTACK_LIVE_EDIT_TAGS= false
 
-# For NA region add CONTENTSTACK_APP_HOST=app.contentstack.com
-# For EU region add CONTENTSTACK_APP_HOST=eu-app.contentstack.com
-# For setting custom host add CONTENTSTACK_API_HOST=for(NA: api.contentstack.io, EU: eu-api.contentstack.com)
+# CONTENTSTACK_API_HOST=api.contentstack.io
+# CONTENTSTACK_REGION=eu
+# CONTENTSTACK_BRANCH=main
+
+### NOTE:
+  # CONTENTSTACK_API_HOST- For setting custom api host for contentstack sdk
+  # CONTENTSTACK_REGION- For setting custom region for contentstack sdk default is us
+  # CONTENTSTACK_BRANCH- For setting custom branch for contentstack sdk default is main
+
+  # Setting Live Preview URL's
+  # CONTENTSTACK_PREVIEW_HOST- For eu region use eu-rest-preview.contentstack.com/azure-na-rest-preview.contentstack.com/azure-eu-rest-preview.contentstack.com
