--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@contentstack/live-preview-utils": "^1.4.0",
     "@contentstack/utils": "^1.3.1",
     "@ngrx/store": "^14.3.0",
-    "contentstack": "github:contentstack/contentstack-javascript#fix/CS-43301-merge-live-preview",
+    "contentstack": "^3.19.0",
     "ngx-json-viewer": "^3.1.0",
     "rxjs": "^7.5.6",
     "zone.js": "^0.11.8"
